# starlette-feedgen

./: .gitignore  Makefile  README.md  flake8.ini  mypy.ini  pyproject.toml  requirements.txt
starlette_feedgen/: __init__.py  feed.py  generator.py  utils.py
