[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "starlette_feedgen"
requires-python = ">=3.6"
requires = ["starlette >=0.13.0"]
author = "Arseny Gabdullin"
author-email = "a.gabdullin@tinkoff.ru"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.black]
line-length = 100
target-version = ['py36']

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
combine_as_imports = true
combine_star = true
