[tool.poetry]
name = "async-starlette-feedgen"
version = "0.1.4"
description = "Asynchronous RSS/Atom feeds generation for Starlette, adapted from Django syndication feed framework."
license = "MIT"
authors = ["Arseny Gabdullin <a.gabdullin@tinkoff.ru>"]
maintainers = [
    "Andrey Tsvetkov <an.a.tsvetkov@tinkoff.ru>",
    "Aleksandr Korostil <a.v.korostil@tinkoff.ru>",
]
readme = "README.md"
homepage = "https://github.com/tinkoffjournal/starlette-feedgen"
repository = "https://github.com/tinkoffjournal/starlette-feedgen"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "starlette_feedgen" },
]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.21.0"
aiofiles = "^22.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pyupgrade = "^3.1.0"
flake8-quotes = "^3.3.1"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.4.0"
flake8-functions = "^0.0.7"
flake8-implicit-str-concat = "^0.3.0"
flake8-plugin-utils = "^1.3.2"
flake8-print = "^5.0.0"
flake8-sfs = "^0.0.3"
flake8-simplify = "^0.19.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 88
skip_glob = ["venv"]
combine_as_imports = true
combine_star = true

[tool.black]
target-version = ["py310"]
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
